@@ -103,8 +103,8 @@ int cmd_version (int argc, const char** argv)
 
 static __command struct command_d c_version = {
   .command = "version",
-  .description = "show version and copyright",
   .func = cmd_version,
+  COMMAND_DESCRIPTION ("show version and copyright")
   COMMAND_HELP(
 "version\n"
 "  Display version, copyright, and system summary information\n"
