@@ -45,8 +45,8 @@ static void cmd_reset (int argc, const char** argv)
 
 static __command struct command_d c_reset = {
   .command = "reset",
-  .description = "reset target",
   .func = (command_func_t) cmd_reset,
+  COMMAND_DESCRIPTION ("reset target")
   COMMAND_HELP(
 "reset\n"
 "  Reset the system.\n"
