@@ -1,3 +1,15 @@
+2006-07-10  Marc Singer  <elf@buici.com>
+
+	* src/arch-arm/entry/apex.lds.S: Optimized the RAM memory
+	footprint, especially in the xbss section.  Added stack_size
+	configuration parameter. 
+
+	* src/apex/cmd-boot.c (cmd_boot): Boot address may not come from
+	the environment.
+	(atag_commandline): Simplified the command line from environment
+	code such that there is no code to read fro environment when there
+	is no environment.
+
 2006-06-02  Marc Singer  <elf@buici.com>
 
 	* Makefile: Release 1.3.28.  Added dm9000 mac address programming.
